<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/permissions_description3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="16dp"
        android:text="@string/class_network_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/permissions_description4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/permissions_description4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="15dp"
        android:text="@string/network_password_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/permissions_title5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permissions_description3" />

    <TextView
        android:id="@+id/permissions_title5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="17dp"
        android:text="@string/attendees_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rvAttendees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permissions_description4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAttendees"
        android:layout_width="343dp"
        android:layout_height="114dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/permissions_title6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permissions_title5" />

    <TextView
        android:id="@+id/permissions_title6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="25dp"
        android:text="@string/student_chat_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvAttendees" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="344dp"
        android:layout_height="264dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/end_class_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissions_title6" />

    <Button
        android:id="@+id/end_class_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_class"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
